<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/video_item_view"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="2dp"
    android:layout_marginBottom="10dp"
    android:clickable="true"
    android:focusable="true"
    android:background="?attr/selectableItemBackground">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/video_image"
        android:layout_width="70dp"
        android:layout_height="50dp"
        android:contentDescription="@string/image"
        app:shapeAppearanceOverlay="@style/curved"
        />
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:padding="2dp">
        <TextView
            android:id="@+id/videoName"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/video_name"
            android:textStyle="bold"
            android:gravity="center_vertical"
            android:maxLines="1"
            />
        <TextView
            android:id="@+id/folderName"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:text="@string/folder_name"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/duration"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:textColor="@color/black"
        android:text="@string/duration"
        android:gravity="center"
        android:padding="5dp"
        />
    <ImageView
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:gravity="center"
        android:padding="5dp"
        android:src="@drawable/empty_check_box"
        android:visibility="gone"
        />
    <ImageView
        android:id="@+id/moreBtn"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:gravity="center"
        android:padding="5dp"
        android:src="@drawable/more_icon"
        android:visibility="visible"/>
</LinearLayout>