<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >
    <com.google.android.material.button.MaterialButton
        android:id="@+id/rename_btnMOL"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:icon="@drawable/rename_icon"
        app:iconTint="@color/cool_blue"
        android:text="@string/rename"
        android:textSize="10sp"
        android:textColor="@color/black"
        app:iconGravity="top"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:textAllCaps="false"
        android:layout_weight="1"
        style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/deleteBtnMOL"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:icon="@drawable/delete_icon"
        app:iconTint="@color/cool_blue"
        android:text="@string/delete"
        android:textSize="10sp"
        android:textColor="@color/black"
        app:iconGravity="top"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:textAllCaps="false"
        android:layout_weight="1"
        style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/shareBtnMOL"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:icon="@drawable/baseline_share_24"
        app:iconTint="@color/cool_blue"
        android:text="@string/share"
        android:textSize="10sp"
        android:textColor="@color/black"
        app:iconGravity="top"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:textAllCaps="false"
        android:layout_weight="1"
        style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/infoBtnMOL"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:icon="@drawable/info_icon"
        app:iconTint="@color/cool_blue"
        android:text="@string/info"
        android:textSize="10sp"
        android:textColor="@color/black"
        app:iconGravity="top"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:textAllCaps="false"
        android:layout_weight="1"
        style="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"/>

</LinearLayout>