<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".PlayerActivity">


    <com.google.android.exoplayer2.ui.PlayerView
        android:id="@+id/playerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:keepScreenOn="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:controller_layout_id="@layout/custom_control_view"
        app:use_controller="true" />

    <LinearLayout
        android:id="@+id/topController"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal"
        android:background="#42000000">
        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/back_icon"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/back_btn"
            app:tint="@color/white"/>
        <TextView
            android:id="@+id/videoTitle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/video_name"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:singleLine="true"
            android:marqueeRepeatLimit="marquee_forever"
            android:ellipsize="marquee"
            android:textStyle="bold"/>

        <ImageButton
            android:id="@+id/subtitle_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/menu"
            android:src="@drawable/subtitles_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@color/white"
            android:padding="10dp"/>
        <ImageButton
            android:id="@+id/track_selection_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/menu"
            android:src="@drawable/track_selection_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:tint="@color/white"
            android:layout_marginEnd="50dp"
            android:padding="10dp"/>

    </LinearLayout>

    <ImageButton
        android:id="@+id/lock_btn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:backgroundTint="@android:color/transparent"
        android:contentDescription="@string/lock"
        android:src="@drawable/open_lock"
        app:layout_constraintEnd_toEndOf="@+id/topController"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />


    <ImageButton
        android:id="@+id/playPauseButton"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:clickable="true"
        android:focusable="true"
        android:background="?android:selectableItemBackground"
        android:contentDescription="@string/play_btn"
        android:src="@drawable/pause_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <ImageButton
        android:id="@+id/rewind"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="?android:selectableItemBackground"

        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/replay_5"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/playPauseButton"
        app:layout_constraintStart_toStartOf="@+id/playerView"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <ImageButton
        android:id="@+id/fast_forword"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="?android:selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/forward_10_sec"
        app:layout_constraintBottom_toBottomOf="parent"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/playPauseButton"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/white" />

    <LinearLayout
        android:id="@+id/bottomController"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal"
        android:gravity="center|bottom"
        android:background="#42000000">
        <ImageButton
            android:id="@+id/changeOrientationBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/baseline_screen_rotation_24"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/repeat_btn"
            app:tint="@color/white"/>

        <ImageButton
            android:id="@+id/prevButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/prev_btn"
            android:src="@drawable/previous_icon"
            app:tint="@color/white"
            />
        <ImageButton
            android:id="@+id/playPauseButton1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/prev_btn"
            android:src="@drawable/play_icon"
            app:tint="@color/white"
            />
        <ImageButton
            android:id="@+id/nextButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/next_btn"
            android:src="@drawable/next_icon"
            app:tint="@color/white"
            />
        <ImageButton
            android:id="@+id/fullScreen_btn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/fullscreen_btn"
            android:src="@drawable/fullscreen_icon"
            app:tint="@color/white"
            />
    </LinearLayout>

    <TextView
        android:id="@+id/brightnessTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Brightness"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/playerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/playPauseButton" />
</androidx.constraintlayout.widget.ConstraintLayout>
